<resources>
    <string name="app_name">Moneybook</string>
    <string name="into_in_profil">Вход в профиль</string>
    <string name="login_text">Логин:</string>
    <string name="password_text">Пароль:</string>
    <string name="login_button">Войти:</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="forgot_button">Забыли пароль</string>
    <string name="send_email_button">Отправить письмо</string>
    <string name="email_code">Код подтверждения</string>
    <string name="control_question">Ваш контрольный вопрос</string>


    <string-array name="planets_array">
        <item>Отправить письмо на email</item>
        <item>Контрольный вопрос</item>
    </string-array>

    <string-array name="set_email_question">
        <item>Установить email</item>
        <item>Контрольный вопрос</item>
    </string-array>

    <string-array name="choice_question">
        <item>Девичья фамилия матери</item>
        <item>Кличка питомца</item>
        <item>Твой родной город</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="save">Сохранить</string>
    <string name="password_description">Пароль должен содержать только буквы латинского алфавита, одну прописную (A-Z) и строчную (a-z) букву</string>

    <string name="registration_title"><b>Регистрация</b></string>
    <string name="enter_number_titel">Введите номер</string>
    <string name="tv_skip">Пропустить</string>
    <string name="agreement_title">Пользовательское соглашение</string>
    <string name="agreement_text">Используя приложение и сервисы <b><i>Moneybook</i></b>, вы соглашаетесь с </string>
    <string name="tv_accept">Принять</string>
    <string name="tv_back">Назад</string>
    <string name="change_password">Сменить пароль</string>
    <string name="welcome_title">Language</string>
    <string name="language">Язык</string>
    <string name="btn_confirm">Отправить SMS</string>
    <string name="welcome_go">Дальше</string>
    <string name="add_new_unconfirmed_debts">Добавить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_ready">Готово</string>
    <string name="owes_me">Должны мне</string>
    <string name="should_i">Должен я</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="summ">Сумма</string>
    <string name="note_for_yourself">Заметка (для себя)</string>
    <string name="note_for_yourself_help_text">Данная запись делается только для себя и не отправляется другому абоненту</string>
    <string name="Comment_help_text">Данный коментарий видит абонент, которому вы отправляете запрос на подтверждение долга</string>
    <string name="Comment">Комментарий (для абонента)</string>
    <string name="date_arhive">Дата архивации</string>
    <string name="comment_text">Комментарий</string>
    <string name="note_text">Заметка</string>
    <string name="telephone_text">Телефон</string>
    <string name="status_text">Статус</string>

    <string name="currency">Валюта</string>
    <string name="enter_summ">Введите сумму</string>
    <string name="Contacts">Контакты</string>
    <string name="phone_number">+79171234567</string>
    <string name="password">Пароль</string>
    <string name="tv_change_password">Сменить пароль</string>
    <string name="enter_confirmation_code">Введите код подтверждения</string>
    <string name="send_request">Отправить запрос</string>
    <string name="tv_tel">Тел.:</string>
    <string name="tv_omp_title">Должен мне</string>
    <string name="btn_to_archiv">В архив</string>
    <string name="btn_to_delete">Удалить</string>
    <string name="i_owe_title">Должен я</string>
    <string name="tv_chain_title">Поздравляем. Вы в цепочке!</string>
    <string name="rejection">Отказ</string>
    <string name="agree">Согласен</string>
    <string name="after_write_off_title">После списания</string>
    <string name="Ask_a_security_question">Задайте контрольный вопрос</string>
    <string name="write_the_answer">Напишите ответ</string>
    <string name="name">Имя</string>
    <string name="install">Установить</string>
    <string name="view_archive">Просмотреть архив</string>
    <string name="exit">Выйти</string>
    <string name="notifications">Push уведомления</string>
    <string name="auro_cancel">Автоматически списывать долг если цепочка собралась</string>
    <string name="not_new_debt">Уведомление о новом долге</string>
    <string name="not_new_cycle">Присылать сообщение о собранной цепочке долгов</string>
    <string name="multi_valute">Разновалютная цепь долгов</string>
    <string name="descText">Цепь долгов совпала из %s участников. Мы можем списать у всех участников по:</string>
    <string name="descResponse">Подтвердили на списание %s участников.  После подтверждения всех участников долг спишется. Поторопите сових должников и мы быстро закроем этот долг.</string>
    <string name="cycleText">Цепочка из %s участников собрана. %s USD</string>
    <string name="new_debt_notif">Подтвердите долг в размере %s кредитору %s</string>
    <string name="new_loan_norif">Подтвердите долг в размере %s дебитору %s</string>
    <string name="agreement_link"><![CDATA[<a href=\'http://moneybook-app.com/agreement\'> Условиями предоставления услуг Moneybook </a>]]></string>
    <string name="agreement_link_1"><![CDATA[<a href=\'http://moneybook-app.com/agreement\'> Политикой конфиденциальности  </a>]]></string>
    <string name="abonent">Абонент</string>
    <string name="sended">Отправлено</string>
    <string name="restore">Восстановить</string>
    <string name="wrong_password">Пароль неверный</string>
    <string name="password_saved">Пароль сохранен</string>
    <string name="password_not_saved">Пароль не сохранен</string>
    <string name="akkaunt_remove">Удалить аккаунт</string>
    <string name="lowercase_letter">строчная буква</string>
    <string name="uppercase_letter">прописная буква</string>
    <string name="numeral">цифра</string>
    <string name="characters_6">не менее 6 символов</string>
    <string name="number_forma_err">Введите номер в международном формате, пример +ххххххххх</string>
    <string name="unconfirmed">Неподтвержденные долги</string>
    <string name="messages">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="my_debts">Мои долги</string>
    <string name="debts">Долги</string>
    <string name="autorization_number_text">Вы авторизовались в приложении по номеру:</string>



    <string-array name="language_array">
        <item>ru</item>
        <item>en</item>
    </string-array>

    <string-array name="currency_array">
        <item>RUB</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ISK</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
    </string-array>

    <string-array name="number_array">
        <item>+7</item>
        <item>+1</item>
        <item>+33</item>
        <item>+49</item>
        <item>+86</item>
    </string-array>

</resources>
