<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_agreement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement_title"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />


        <TextView
            android:id="@+id/tv_agreement_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_text"
            android:layout_below="@+id/tv_agreement_title"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_link_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_link"
            android:layout_below="@id/tv_agreement_text"
            android:textColorLink="@color/oweMe"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_link_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_link_1"
            android:layout_below="@+id/tv_link_1"
            android:textColorLink="@color/oweMe"
            android:textSize="15sp"
            />


    <TextView
        android:id="@+id/tv_agreement_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_accept"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:textColor="@color/oweMe"
        />
    <TextView
        android:id="@+id/tv_agreement_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:textColor="@color/oweMe"
        />


</RelativeLayout>