<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:scrollbars="none"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_add_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
       >

        <RadioGroup
            android:id="@+id/rg_add_person"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_add_person_owes_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/owes_me"
                android:textAlignment="center"
                android:textColor="@color/colorBlueForMoneybook"
                android:textColorHint="#59959595"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_add_person_should_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/should_i"
                android:textColor="@color/colorRedForMoneybook"
                android:textColorHint="@color/colorGrayForMoneybook" />
        </RadioGroup>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorGrayForMoneybook" />

        <LinearLayout
            android:id="@+id/ll_ap_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_add_person"
            android:paddingTop="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView
                        android:id="@+id/tv_ap_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="3dp"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_ap_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/text_fielld_design"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:padding="3dp"
                        android:textSize="14sp" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/iv_get_contacts_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Contacts"
                    android:padding="3dp"
                    android:src="@drawable/ic_action_contacts" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_ap_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:text="@string/tv_tel"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_ap_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:padding="3dp"
                    android:background="@drawable/text_fielld_design"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="18" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ap_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="@string/number_forma_err"
                android:textAlignment="viewStart"
                android:textColor="@color/colorGrayForMoneybook"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_ap_summ"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:text="@string/summ"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_ap_summ"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_fielld_design"
                    android:hint="@string/enter_summ"
                    android:inputType="number"
                    android:padding="3dp"

                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_ap_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="@string/currency"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/s_currency_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_marginLeft="5dp"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_note_for_yourself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/note_for_yourself"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_note_for_yourself"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/text_fielld_design"
                    android:textSize="14sp"
                    android:hint="@string/note_for_yourself_help_text"
                    android:padding="3dp"
                    android:paddingStart="7dp"
                    android:imeOptions="actionNext"
                    android:inputType="text|textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/Comment"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="3dp"
                    android:paddingStart="7dp"
                    android:hint="@string/Comment_help_text"
                    android:background="@drawable/text_fielld_design"
                    android:textSize="14sp"
                    android:imeOptions="actionNext"
                    android:inputType="text|textMultiLine" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_ap_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_ap_form_container"

            android:layout_marginTop="15sp"
            android:text="@string/save"

            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:background="@drawable/round_shape_button"
            android:textColor="@color/colorBlueForMoneybook"

            />

        <Button
            android:id="@+id/bt_ap_send_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_ap_save_button"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/round_shape_button"
            android:textColor="@color/colorBlueForMoneybook"

            android:text="@string/send_request"
             />

    </RelativeLayout>
</ScrollView>