<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    >

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/login_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_main_logo"
        android:text="@string/into_in_profil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/login_data_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title_text_view"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <LinearLayout
            android:id="@+id/login_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                />


            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:hint="phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/et_password_number"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:hint="password"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_data_container"
        android:text="@string/login_button"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_alignEnd="@+id/login_title_text_view"
        android:text="@string/forgot_button" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>