<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Welcome">

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_welcome_title"
        >

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_centerHorizontal="true"

            />

        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title_text_view"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_welcome_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_go"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />



</RelativeLayout>