<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_button"
        android:padding="10sp"
        android:textColor="@color/colorBlueForMoneybook"
        android:text="@string/send_email_button"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tv_emil_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_code"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_send_email"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/et_password_from_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_emil_code"
        android:background="@drawable/text_fielld_design"
        android:padding="5dp"
        android:textColorHint="@color/colorGrayForMoneybook"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_confirmation_code"
        android:inputType="text"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btn_send_code_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_button"
        android:padding="10sp"
        android:textColor="@color/colorBlueForMoneybook"
        android:layout_below="@+id/et_password_from_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="OK" />

</RelativeLayout>