<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/fg_tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/fg_et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_tv_new_password"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        />

    <LinearLayout
        android:id="@+id/fg_ll_valid_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/fg_et_new_password"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:id="@+id/fg_iv_lower_case_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            />
        <ImageView
            android:id="@+id/fg_iv_upper_case_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            />
        <ImageView
            android:id="@+id/fg_iv_number_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            />
        <ImageView
            android:id="@+id/fg_iv_length_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/fg_tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fg_ll_valid_icons"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/fg_et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_tv_confirm_password"
        android:layout_marginTop="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/fg_iv_confirm_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_name"
        android:layout_below="@id/fg_et_confirm_password"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/fg_bt_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/fg_iv_confirm_valid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/google_1x"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/fg_bt_save_password"
        >
        <TextView
            android:id="@+id/fg_tv_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_description"
            android:isScrollContainer="true"
            />
    </ScrollView>

    <TextView
        android:id="@+id/fg_tv_password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        />

</RelativeLayout>